--- a/Pagina/inicioSesion.html
+++ b/Pagina/inicioSesion.html
@@ -10,28 +10,29 @@
     <title>Log In</title>
 </head>
 <body>
-    <div>
-        <div>Inicio de sesión</div>
-    </div>
-
-    <div class="row">
-        <form class="col s12" action="post">
-            <div class="row">
-                <div class="input-field col s6">
-                    <input id="usuario" type="text" class="validate">
-                    <label for="last_name">Usuario</label>
+    <div class="container">
+        <div>
+            <div>Inicio de sesión</div>
+        </div>
+        <div class="row">
+            <form class="col s12" action="post">
+                <div class="row center">
+                    <div class="input-field col s6">
+                        <input id="usuario" type="text" class="validate">
+                        <label for="last_name">Usuario</label>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="input-field col s12">
-                    <input id="contrasena" type="password" class="validate">
-                    <label for="password">Contraseña</label>
+                <div class="row">
+                    <div class="input-field col s6">
+                        <input id="contrasena" type="password" class="validate">
+                        <label for="password">Contraseña</label>
+                    </div>
                 </div>
-            </div>
-            <button class="btn waves-effect waves-light" type="submit" name="action">Submit
-                <i class="material-icons right">send</i>
-            </button>
-        </form>
+                <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+                    <i class="material-icons right">send</i>
+                </button>
+            </form>
+        </div>
     </div>
 
     <!--JavaScript at end of body for optimized loading-->
