--- a/Pagina/registro.html
+++ b/Pagina/registro.html
@@ -7,7 +7,7 @@
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Log In</title>
+    <title>Sign Up</title>
 </head>
 <body>
     <nav>
@@ -22,27 +22,38 @@
     </nav>
     <div class="container">
         <div>
-            <div>Inicio de sesión</div>
+            <div>Registro</div>
         </div>
+
         <div class="row">
-            <form class="col s12" action="post">
-                <div class="row center">
+            <form class="col s12">
+                <div class="row">
                     <div class="input-field col s6">
-                        <input id="usuario" type="text" class="validate">
-                        <label for="last_name">Usuario</label>
+                        <input id="nombre" type="text" class="validate">
+                        <label for="nombre">Nombre(s)</label>
+                    </div>
+                    <div class="input-field col s6">
+                        <input id="apellidos" type="text" class="validate">
+                        <label for="apellidos">Apellidos</label>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="input-field col s6">
+                    <div class="input-field col s12">
                         <input id="contrasena" type="password" class="validate">
-                        <label for="password">Contraseña</label>
+                        <label for="contrasena">Contraseña</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <input id="email" type="email" class="validate">
+                        <label for="email">Correo</label>
                     </div>
                 </div>
                 <button class="btn waves-effect waves-light" type="submit" name="action">Submit
                     <i class="material-icons right">send</i>
                 </button>
             </form>
-        </div>
+        </div> 
     </div>
 
     <!--JavaScript at end of body for optimized loading-->
