--- a/Pagina/index.html
+++ b/Pagina/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>QR</title>
 </head>
 <body>
-    
+    <nav>
+        <div class="nav-wrapper"></div>
+        <a href="" class="brand-logo"></a>
+    </nav>
 </body>
 </html>
