Primera versión en HTML de inicio de sesión, registro y página de inicio

--- a/Pagina/registro.html
+++ b/Pagina/registro.html
@@ -15,14 +15,12 @@
             <a href="#" class="brand-logo"><i class="material-icons">book</i></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="inicioSesion.html">Log In</a></li>
-                <li><a href="registro.html">Sign Up</a></li>
             </ul>
         </div>
     </nav>
     <div class="container">
-        <div>
-            <div>Registro</div>
+        <div class="row center">
+            <h3>Registro</h3>
         </div>
 
         <div class="row">
