--- a/Pagina/index.html
+++ b/Pagina/index.html
@@ -1,26 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <!--Import Google Icon Font-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <nav>
-        <div class="nav-wrapper">
-            <a href="#" class="brand-logo"><i class="material-icons">book</i></a>
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="inicioSesion.html">Log In</a></li>
-                <li><a href="registro.html">Sign Up</a></li>
-            </ul>
+    <head>
+        <!--Import Google Icon Font-->
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <!--Import materialize.css-->
+        <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Inicio</title>
+    </head>
+    <body>
+        <nav>
+            <div class="nav-wrapper">
+                <a href="#" class="brand-logo"><i class="material-icons">book</i></a>
+                <ul id="nav-mobile" class="right hide-on-med-and-down">
+                    <li><a href="index.html">Inicio</a></li>
+                </ul>
+            </div>
+        </nav>
+        <div class="container">
+            <div class="row center">
+                <h3>¡Bienvenid@!</h3>
+            </div>
+            <div class="row center">
+                <a class="waves-effect waves-light btn-large" href="inicioSesion.html"><i class="material-icons left">account_circle</i>Inicio de Sesión</a>
+                <a class="waves-effect waves-light btn-large" href="registro.html"><i class="material-icons left">assignment</i>Registro</a>
+            </div>
         </div>
-    </nav>
-</body>
+
+        <!--JavaScript at end of body for optimized loading-->
+        <script type="text/javascript" src="js/materialize.min.js"></script>
+    </body>
 </html>
