--- a/Pagina/inicioSesion.html
+++ b/Pagina/inicioSesion.html
@@ -15,25 +15,23 @@
             <a href="#" class="brand-logo"><i class="material-icons">book</i></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="inicioSesion.html">Log In</a></li>
-                <li><a href="registro.html">Sign Up</a></li>
             </ul>
         </div>
     </nav>
     <div class="container">
-        <div>
-            <div>Inicio de sesión</div>
+        <div class="row center">
+            <h3>Inicio de sesión</h3>
         </div>
         <div class="row">
             <form class="col s12" action="post">
-                <div class="row center">
-                    <div class="input-field col s6">
+                <div class="row">
+                    <div class="input-field col s12">
                         <input id="usuario" type="text" class="validate">
                         <label for="last_name">Usuario</label>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="input-field col s6">
+                    <div class="input-field col s12">
                         <input id="contrasena" type="password" class="validate">
                         <label for="password">Contraseña</label>
                     </div>
