--- a/Pagina/inicioSesion.html
+++ b/Pagina/inicioSesion.html
@@ -1,49 +1,92 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <!--Import Google Icon Font-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Log In</title>
-</head>
-<body>
-    <nav>
-        <div class="nav-wrapper">
-            <a href="#" class="brand-logo"><i class="material-icons">book</i></a>
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="index.html">Inicio</a></li>
-            </ul>
-        </div>
-    </nav>
-    <div class="container">
-        <div class="row center">
-            <h3>Inicio de sesión</h3>
-        </div>
-        <div class="row">
-            <form class="col s12" action="post">
-                <div class="row">
-                    <div class="input-field col s12">
-                        <input id="usuario" type="text" class="validate">
-                        <label for="last_name">Usuario</label>
+<html lang="en" class="theme-light">
+    <head>
+        <!--Import Google Icon Font-->
+        <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
+        <!--Import materialize.css-->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Log In</title>
+    </head>
+    <body>
+        <nav class="navbar is-info" role="navigation" aria-label="main navigation">
+            <div class="navbar-brand">
+                <a class="navbar-item" href="index.html">
+                    <span class="icon is-large">
+                        <i class="fas fa-home fa-lg"></i>
+                    </span>
+                </a>
+                <a role="button" id="burger" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="NavMenu">
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
+                </a>
+            </div>
+            <div class="navbar-menu" id="NavMenu">
+                <div class="navbar-end">
+                    <div class="navbar-item">
+                        <div class="buttons">
+                            <a class="button is-info is-dark" href="registro.html">
+                                <strong>Registro</strong>
+                            </a>
+                            <a class="button is-info is-light" href="inicioSesion.html">
+                                Ingreso
+                            </a>
+                        </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="input-field col s12">
-                        <input id="contrasena" type="password" class="validate">
-                        <label for="password">Contraseña</label>
-                    </div>
-                </div>
-                <button class="btn waves-effect waves-light" type="submit" name="action">Submit
-                    <i class="material-icons right">send</i>
-                </button>
-            </form>
-        </div>
-    </div>
+            </div>
+        </nav>
 
-    <!--JavaScript at end of body for optimized loading-->
-    <script type="text/javascript" src="js/materialize.min.js"></script>
-</body>
+        <section class="is-medium  has-background-text-light mx-6 mb-6">
+            <div class="columns is-centered is-mobile mt-6 mb-5">
+                <h1 class="is-size-1 has-text-weight-light">Ingreso</h1>
+            </div>
+            <form>
+                <div class="columns is-centered is-mobile">
+                    <div class="field column is-10-desktop is-10-tablet is-11-mobile">
+                        <label class="label">Correo</label>
+                        <div class="control">
+                            <input class="input" type="email">
+                        </div>
+                    </div>
+                </div>
+                <div class="columns is-centered is-mobile">
+                    <div class="field column is-10-desktop is-10-tablet is-11-mobile">
+                        <label class="label">Contraseña</label>
+                        <div class="control">
+                            <input class="input" type="password">
+                        </div>
+                    </div>
+                </div>
+                <div class="columns is-centered is-mobile">
+                    <div class="field column is-10-desktop is-10-tablet is-11-mobile">
+                        <div class="columns is-mobile is-centered">
+                            <div class="control">
+                                <button class="button is-link mx-5 my-5">Enviar</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+            </form>
+        </section>
+
+        <footer class="footer has-background-info">
+            <div class="content has-text-centered">
+                <p>
+                    <strong>17 de octubre de 2024</strong>
+                    <br>Ana Paula Rosales Olguín <i class="fas fa-moon"></i> Germán Heberto Pancardo Ortega<br>
+                    <strong>Ciudad de México.</strong>
+                </p>
+            </div>
+        </footer>
+
+        <!--JavaScript at end of body for optimized loading-->
+        <!-- <script type="text/javascript" src="js/materialize.min.js"></script> -->
+        <script src="js/app.js"></script>
+    </body>
 </html>
