--- a/Pagina/index.html
+++ b/Pagina/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" class="theme-light">
     <head>
-        <!--Import Google Icon Font-->
-        <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
-        <!--Import materialize.css-->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
         <meta charset="UTF-8">
@@ -18,36 +15,17 @@
                         <i class="fas fa-home fa-lg"></i>
                     </span>
                 </a>
-                <a role="button" id="burger" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="NavMenu">
-                    <span aria-hidden="true"></span>
-                    <span aria-hidden="true"></span>
-                    <span aria-hidden="true"></span>
-                    <span aria-hidden="true"></span>
-                </a>
-            </div>
-            <div class="navbar-menu" id="NavMenu">
-                <div class="navbar-end">
-                    <div class="navbar-item">
-                        <div class="buttons">
-                            <a class="button is-info is-dark" href="registro.html">
-                                <strong>Registro</strong>
-                            </a>
-                            <a class="button is-info is-light" href="inicioSesion.html">
-                                Ingreso
-                            </a>
-                        </div>
-                    </div>
-                </div>
             </div>
         </nav>
-        <section class="is-medium  has-background-text-light mx-6 mb-6 pb-6">
+
+        <section class="is-medium mx-6 mb-6 pb-6">
             <div class="columns is-centered is-mobile mt-6 mb-5">
                 <h1 class="is-size-1 has-text-weight-light">¡Bienvenid@!</h1>
             </div>
             <div class="columns is-centered is-mobile is-multiline py-6">
                 <a class="column is-2-desktop is-5-mobile" href="inicioSesion.html">
                     <div class="columns is-centered">
-                        <button class="button is-large">
+                        <button class="button is-info is-soft is-large">
                             <span class="icon">
                                 <i class="fas fa-user"></i>
                             </span>
@@ -57,7 +35,7 @@
                 </a>
                 <a class="column is-2-desktop is-5-mobile" href="registro.html">
                     <div class="columns is-centered">
-                        <button class="button is-large">
+                        <button class="button is-info is-dark is-large">
                             <span class="icon">
                                 <i class="fas fa-book"></i>
                             </span>
@@ -72,14 +50,12 @@
             <div class="content has-text-centered">
                 <p>
                     <strong>17 de octubre de 2024</strong>
-                    <br>Ana Paula Rosales Olguín <i class="fas fa-moon"></i> Germán Heberto Pancardo Ortega<br>
-                    <strong>Ciudad de México.</strong>
+                    <br>Ana Paula Rosales OlguÃ­n <i class="fas fa-moon"></i> GermÃ¡n Heberto Pancardo Ortega<br>
+                    <strong>Ciudad de MÃ©xico.</strong>
                 </p>
             </div>
         </footer>
 
-        <!--JavaScript at end of body for optimized loading-->
-        <!-- <script type="text/javascript" src="js/materialize.min.js"></script> -->
         <script src="js/app.js"></script>
     </body>
 </html>
