--- a/Pagina/inicioSesion.html
+++ b/Pagina/inicioSesion.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" class="theme-light">
     <head>
-        <!--Import Google Icon Font-->
-        <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
-        <!--Import materialize.css-->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
         <meta charset="UTF-8">
@@ -18,30 +15,10 @@
                         <i class="fas fa-home fa-lg"></i>
                     </span>
                 </a>
-                <a role="button" id="burger" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="NavMenu">
-                    <span aria-hidden="true"></span>
-                    <span aria-hidden="true"></span>
-                    <span aria-hidden="true"></span>
-                    <span aria-hidden="true"></span>
-                </a>
-            </div>
-            <div class="navbar-menu" id="NavMenu">
-                <div class="navbar-end">
-                    <div class="navbar-item">
-                        <div class="buttons">
-                            <a class="button is-info is-dark" href="registro.html">
-                                <strong>Registro</strong>
-                            </a>
-                            <a class="button is-info is-light" href="inicioSesion.html">
-                                Ingreso
-                            </a>
-                        </div>
-                    </div>
-                </div>
             </div>
         </nav>
 
-        <section class="is-medium  has-background-text-light mx-6 mb-6">
+        <section class="is-medium mx-6 mb-6">
             <div class="columns is-centered is-mobile mt-6 mb-5">
                 <h1 class="is-size-1 has-text-weight-light">Ingreso</h1>
             </div>
@@ -56,7 +33,7 @@
                 </div>
                 <div class="columns is-centered is-mobile">
                     <div class="field column is-10-desktop is-10-tablet is-11-mobile">
-                        <label class="label">Contraseña</label>
+                        <label class="label">ContraseÃ±a</label>
                         <div class="control">
                             <input class="input" type="password">
                         </div>
@@ -66,7 +43,7 @@
                     <div class="field column is-10-desktop is-10-tablet is-11-mobile">
                         <div class="columns is-mobile is-centered">
                             <div class="control">
-                                <button class="button is-link mx-5 my-5">Enviar</button>
+                                <button class="button is-link mx-5 my-5">Ingresar</button>
                             </div>
                         </div>
                     </div>
@@ -79,14 +56,12 @@
             <div class="content has-text-centered">
                 <p>
                     <strong>17 de octubre de 2024</strong>
-                    <br>Ana Paula Rosales Olguín <i class="fas fa-moon"></i> Germán Heberto Pancardo Ortega<br>
-                    <strong>Ciudad de México.</strong>
+                    <br>Ana Paula Rosales OlguÃ­n <i class="fas fa-moon"></i> GermÃ¡n Heberto Pancardo Ortega<br>
+                    <strong>Ciudad de MÃ©xico.</strong>
                 </p>
             </div>
         </footer>
 
-        <!--JavaScript at end of body for optimized loading-->
-        <!-- <script type="text/javascript" src="js/materialize.min.js"></script> -->
         <script src="js/app.js"></script>
     </body>
 </html>
