Empezamos back xd

--- a/Pagina/inicioSesion.html
+++ b/Pagina/inicioSesion.html
@@ -78,9 +78,8 @@
         <footer class="footer has-background-info">
             <div class="content has-text-centered">
                 <p>
-                    <strong>17 de octubre de 2024</strong>
-                    <br>Ana Paula Rosales Olguín <i class="fas fa-moon"></i> Germán Heberto Pancardo Ortega<br>
-                    <strong>Ciudad de México.</strong>
+                    <br>Ana Paula Rosales Olguín <i class="fas fa-moon"></i>𓃮 Germán Heberto Pancardo Ortega<br>
+                    <strong>Ciudad de México | 2024</strong>
                 </p>
             </div>
         </footer>
