Encoding de index

--- a/Pagina/index.html
+++ b/Pagina/index.html
@@ -50,8 +50,8 @@
             <div class="content has-text-centered">
                 <p>
                     <strong>17 de octubre de 2024</strong>
-                    <br>Ana Paula Rosales OlguÃ­n <i class="fas fa-moon"></i> GermÃ¡n Heberto Pancardo Ortega<br>
-                    <strong>Ciudad de MÃ©xico.</strong>
+                    <br>Ana Paula Rosales Olguín <i class="fas fa-moon"></i> Germán Heberto Pancardo Ortega<br>
+                    <strong>Ciudad de México.</strong>
                 </p>
             </div>
         </footer>
