--- a/Pagina/index.html
+++ b/Pagina/index.html
@@ -49,9 +49,8 @@
         <footer class="footer has-background-info">
             <div class="content has-text-centered">
                 <p>
-                    <strong>17 de octubre de 2024</strong>
                     <br>Ana Paula Rosales Olguín <i class="fas fa-moon"></i> Germán Heberto Pancardo Ortega<br>
-                    <strong>Ciudad de México.</strong>
+                    <strong>Ciudad de México | 2024</strong>
                 </p>
             </div>
         </footer>
