--- a/Pagina/inicioSesion.html
+++ b/Pagina/inicioSesion.html
@@ -27,15 +27,7 @@
                     <div class="field column is-10-desktop is-10-tablet is-11-mobile">
                         <label class="label">Usuario</label>
                         <div class="control">
-                            <input class="input" type="string">
-                        </div>
-                    </div>
-                </div>
-                <div id="CorreoTotal" class="columns is-centered is-mobile">
-                    <div class="field column is-10-desktop is-10-tablet is-11-mobile">
-                        <label class="label">Correo Electrónico</label>
-                        <div class="control">
-                            <input class="input" type="email">
+                            <input name="usuario" class="input" type="string">
                         </div>
                     </div>
                 </div>
@@ -43,7 +35,7 @@
                     <div class="field column is-10-desktop is-10-tablet is-11-mobile">
                         <label class="label">Contraseña</label>
                         <div class="control">
-                            <input class="input" type="password">
+                            <input name="contrasena" class="input" type="password">
                         </div>
                     </div>
                 </div>
@@ -62,7 +54,7 @@
         <footer class="footer has-background-info">
             <div class="content has-text-centered">
                 <p>
-                    <br>Ana Paula Rosales Olguín <i class="fas fa-moon"></i>𓃮 Germán Heberto Pancardo Ortega<br>
+                    <br>Ana Paula Rosales Olguín <i class="fas fa-moon"></i> Germán Heberto Pancardo Ortega<br>
                     <strong>Ciudad de México | 2024</strong>
                 </p>
             </div>
