Agregados html faltantes de los wireframes de Figma

--- a/Pagina/registro.html
+++ b/Pagina/registro.html
@@ -1,88 +1,13 @@
 <!DOCTYPE html>
-<html lang="es" class="theme-light">
-    <head>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Registro</title>
-    </head>
-    <body>
-        <nav class="navbar is-info" role="navigation" aria-label="main navigation">
-            <div class="navbar-brand">
-                <a class="navbar-item" href="index.html">
-                    <span class="icon is-large">
-                        <i class="fas fa-home fa-lg"></i>
-                    </span>
-                </a>
-            </div>
-        </nav>
-        
-        <section class="is-medium mx-6 mb-6">
-            <div class="columns is-centered is-mobile mt-6 mb-5">
-                <h1 class="is-size-1 has-text-weight-light">Registro</h1>
-            </div>
-            <form action="../registro.php" method="POST">
-                <div id="UsuarioTotal" class="columns is-centered is-multiline is-mobile">
-                    <div class="column is-5-desktop is-5-tablet is-11-mobile">
-                        <label class="label">Nombre de usuario</label>
-                        <div class="control">
-                            <input class="input" type="text" name="usuario" placeholder="Ingrese un nombre de usuario" required>
-                        </div>
-                    </div>
-                </div>
-                <div id="NombreTotal" class="columns is-centered is-multiline is-mobile">
-                    <div class="column is-5-desktop is-5-tablet is-11-mobile">
-                        <label class="label">Nombre (s)</label>
-                        <div class="control">
-                            <input class="input" type="text" name="nombre" placeholder="Ingrese su nombre" required>
-                        </div>
-                    </div>
-                    <div class="column is-5-desktop is-5-tablet is-11-mobile">
-                        <label class="label">Apellidos</label>
-                        <div class="control">
-                            <input class="input" type="text" name="apellido" placeholder="Ingrese sus apellidos" required>
-                        </div>
-                    </div>
-                </div>
-                <div id="CorreoTotal" class="columns is-centered is-mobile">
-                    <div class="field column is-10-desktop is-10-tablet is-11-mobile">
-                        <label class="label">Correo</label>
-                        <div class="control">
-                            <input class="input" type="email" name="correo" placeholder="Ingrese su correo" required>
-                        </div>
-                    </div>
-                </div>
-                <div id="ContrasenaTotal" class="columns is-centered is-mobile">
-                    <div class="field column is-10-desktop is-10-tablet is-11-mobile">
-                        <label class="label">Contraseña</label>
-                        <div class="control">
-                            <input class="input" type="password" name="contrasena" placeholder="Ingrese su contraseña" required>
-                        </div>
-                    </div>
-                </div>
-                <div id="BotonTotal" class="columns is-centered is-mobile">
-                    <div class="field column is-10-desktop is-10-tablet is-11-mobile">
-                        <div class="columns is-mobile is-centered">
-                            <div class="control">
-                                <button type="submit" class="button is-link mx-5 my-5">Registrarse
-                                    <i class="fa-regular fa-paper-plane" style="padding-left: 5px;"></i>
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </form>
-        </section>
-
-        <footer class="footer has-background-info">
-            <div class="content has-text-centered">
-                <p>
-                    <br>Ana Paula Rosales Olguín <i class="fas fa-moon"></i> Germán Heberto Pancardo Ortega<br>
-                    <strong>Ciudad de México | 2024</strong>
-                </p>
-            </div>
-        </footer>
-        <script src="js/app.js"></script>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Inicio</title>
+</head>
+<body>
+    <header></header>
+    <main></main>
+    <footer></footer>
+</body>
 </html>
